[gd_scene load_steps=9 format=3 uid="uid://wgln4clkkuuk"]

[ext_resource type="Script" uid="uid://s3v8s1vebdqd" path="res://game/menus/connect_local/connect_local_menu.gd" id="1_f4u3n"]
[ext_resource type="Texture2D" uid="uid://durmmh0vjl0eg" path="res://menu/theme/icons/exit.png" id="1_xj6us"]
[ext_resource type="Texture2D" uid="uid://b4yw2ehtx4wqf" path="res://game/menus/connect_local/background.png" id="2_5kfp0"]
[ext_resource type="Texture2D" uid="uid://h6smixikm521" path="res://game/menus/connect_local/icons/create.png" id="2_rk7v2"]
[ext_resource type="Texture2D" uid="uid://cuig0ueedrpys" path="res://game/menus/connect_local/icons/join.png" id="3_ug3n1"]

[sub_resource type="Animation" id="Animation_btwkk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Поиск комнат..."]
}

[sub_resource type="Animation" id="Animation_a8m6p"]
resource_name = "Searching"
length = 1.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["Поиск комнат...", "Поиск комнат", "Поиск комнат.", "Поиск комнат.."]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_er3ru"]
_data = {
&"RESET": SubResource("Animation_btwkk"),
&"Searching": SubResource("Animation_a8m6p")
}

[node name="ConnectLocalMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f4u3n")

[node name="Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5kfp0")
stretch_mode = 6

[node name="Base" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = -200.0
offset_right = 224.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Margin" type="MarginContainer" parent="Base"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="Base/Margin"]
layout_mode = 2

[node name="Title" type="HBoxContainer" parent="Base/Margin/VBox"]
layout_mode = 2

[node name="Separator" type="Control" parent="Base/Margin/VBox/Title"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="Base/Margin/VBox/Title"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Локальная игра"
horizontal_alignment = 1

[node name="Quit" type="Button" parent="Base/Margin/VBox/Title"]
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("1_xj6us")

[node name="Create" type="Button" parent="Base/Margin/VBox"]
layout_mode = 2
size_flags_horizontal = 4
text = "Создать комнату"
icon = ExtResource("2_rk7v2")

[node name="Separator" type="HBoxContainer" parent="Base/Margin/VBox"]
layout_mode = 2
alignment = 1

[node name="LeftSeparator" type="HSeparator" parent="Base/Margin/VBox/Separator"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Base/Margin/VBox/Separator"]
layout_mode = 2
theme_override_colors/font_color = Color(0.501961, 0.501961, 0.501961, 1)
text = "или"

[node name="RightSeparator" type="HSeparator" parent="Base/Margin/VBox/Separator"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LocalLabel" type="Label" parent="Base/Margin/VBox"]
layout_mode = 2
text = "Комнаты в локальной сети:"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Base/Margin/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="Base/Margin/VBox/PanelContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="LobbiesContainer" type="VBoxContainer" parent="Base/Margin/VBox/PanelContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NoLobbiesLabel" type="Label" parent="Base/Margin/VBox/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Поиск комнат..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Base/Margin/VBox/PanelContainer/NoLobbiesLabel"]
libraries = {
&"": SubResource("AnimationLibrary_er3ru")
}
autoplay = "Searching"

[node name="ConnectAddress" type="HBoxContainer" parent="Base/Margin/VBox"]
layout_mode = 2
alignment = 1

[node name="AddressEdit" type="LineEdit" parent="Base/Margin/VBox/ConnectAddress"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Введи адрес сервера..."
alignment = 1
max_length = 49
expand_to_text_length = true
virtual_keyboard_type = 7
clear_button_enabled = true

[node name="Join" type="Button" parent="Base/Margin/VBox/ConnectAddress"]
layout_mode = 2
text = "Подключиться"
icon = ExtResource("3_ug3n1")

[connection signal="pressed" from="Base/Margin/VBox/Title/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Base/Margin/VBox/Create" to="." method="_on_create_pressed"]
[connection signal="text_submitted" from="Base/Margin/VBox/ConnectAddress/AddressEdit" to="." method="_on_join_pressed" unbinds=1]
[connection signal="pressed" from="Base/Margin/VBox/ConnectAddress/Join" to="." method="_on_join_pressed"]
